class OrderedItem {
  constructor(menuNumber, description, isDrink, price) {
    this.menuNumber = menuNumber;
    this.description = description;
    this.isDrink = isDrink;
    this.price = price;
  }
}

module.exports = OrderedItem;
