@startuml commands

title "Commands"

class EventEmitter{

}

class Command{
    + Uuid uuid
    + String commandName
    + Event eventProduced
}

class OpenTab {
    + Int tableNumber
    + String waiter
}

class PlaceOrder{
    + OrderedItem[] items
}

class MarkDrinksServed {
    + Int[] menuNumbers
}

class CloseTab {
    + Float AmountPaid
}

class OrderedItem {
    + Int MenuNumber
    + String Description
    + Bool IsDrink
    + Float Price
}

EventEmitter <|-- Command

Command <|-- PlaceOrder
Command <|-- OpenTab
Command <|-- MarkDrinksServed
Command <|-- CloseTab

PlaceOrder *-- OrderedItem

@enduml
